--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+	border: 1px dashed red;
+	min-height: 10px;
+}
 body {
 	background: black;
 }
@@ -6,4 +10,18 @@ body {
 	width: 400px;
 	height: 300px;
 	margin: auto;
+}
+.postcard-header {
+	display: flex;
+}
+.postcard-header img {
+	width: 50px;
+	height: 50px;
+}
+.postcard-header h1 {
+	margin: 0;
+	width: 100%;
+}
+.postcard-body {
+	display: flex;
 }
