Pending changes exported from your codespace

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
-body{
-    background: black;
+body {
+	background: black;
+}
+* {
+	border: 1px dashed red;
+	min-height: 10px;
+}
+.postcard {
+	background-color: white;
+	width: 400px;
+	height: 300px;
+	margin: auto;
 }
