--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
+
 body {
+	font-family: "Handlee", cursive;
 	background: black;
-
-	// <uniquifier>: Use a unique and descriptive class name
-	// <weight>: Use a value from 400 to 700
-
-	.edu-nsw act foundation-<uniquifier > {
-		font-family: "Edu NSW ACT Foundation", cursive;
-		font-optical-sizing: auto;
-		font-weight: <weight>;
-		font-style: normal;
-	}
 }
 
 .postcard {
@@ -17,6 +10,7 @@ body {
 	width: 400px;
 	height: 300px;
 	margin: auto;
+	padding: 10px;
 }
 .postcard-header {
 	display: flex;
